# Deepsort-YOLOv5-TensorRT

./: README-chinese.md  README-en.md  README.md
reid_torch2trt/: Makefile  onnx_export.py  public.h  trt_export.cpp
yolov5-deepsort-tensorrt/: CMakeLists.txt
yolov5-deepsort-tensorrt/deepsort/include/: datatype.h
yolov5-deepsort-tensorrt/deepsort/src/: nn_matching.cpp  track.cpp  tracker.cpp
yolov5-deepsort-tensorrt/include/: manager.hpp
yolov5-deepsort-tensorrt/src/: main.cpp  manager.cpp
yolov5-deepsort-tensorrt/yolo/: CMakeLists.txt  Makefile  main.cpp
yolov5-deepsort-tensorrt/yolo/include/: yolo_lib.h
yolov5-deepsort-tensorrt/yolo/src/: yolo_lib.cpp
